Fixed gap at bottom of image

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ z-index: 100;
 .img-row {
   width: 100%;
   height: auto;
-  display: block-inline;
+  display: block;
    box-shadow: 0px 0px 15px 0px hsla(240, 2%, 10%, 0.9); /* originally didnt work...but works now since adding in the .img-row:after pseudo class */
 }
 
